--- a/less/theme-wizard.less
+++ b/less/theme-wizard.less
@@ -35,6 +35,26 @@ body {
         .text-mark {
           font-weight: 600;
         }
+        .product-logo-td-payment-page {
+          min-width: 68px;
+          max-width: 68px;
+        }
+        .title-td-payment-page {
+          min-width: 154px;
+          max-width: 154px;
+        }
+        .instance-td-payment-page {
+          min-width: 219px;
+          max-width: 219px;
+        }
+        .time-slider-td-payment-page {
+          min-width: 212px;
+          max-width: 212px;
+        }
+        .period1-td-payment-page {
+          min-width: 81px;
+          max-width: 81px;
+        }
         .period-td-payment-page { //constant width on dynamically changing td, otherwise slider stucks
           min-width: 150px;
           max-width: 150px;
@@ -42,6 +62,10 @@ body {
         .price-td-payment-page { //constant width on dynamically changing td, otherwise slider stucks
           min-width: 90px;
           max-width: 90px;
+        }
+        .del-ic-td-payment-page {
+          min-width: 29px;
+          max-width: 29px;
         }
         .glyphicon-trash {
           color: lighten(@text-gray-color, 10%);
